--- a/index.html
+++ b/index.html
@@ -147,9 +147,7 @@
                                 <label for="exampleFormControlTextarea1" class="form-label">Ecrivez-moi donc...</label>
                                 <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
                             </div>
-                            <button type="submit" class="btn btn-warningr" data-bs-toggle="tooltip" data-bs-placement="top"
-                            data-bs-custom-class="custom-tooltip"
-                            data-bs-title="Ne marche pas pour le moment, désolé...">Envoyer</button>
+                            <button type="" class="btn btn-warningr" data-bs-toggle="popover" data-bs-title="Oops..." data-bs-content="Désolé, ça ne marche pas pour le moment...">Envoyer</button>
                         </form>
                     </div>
                 </div>
