--- a/index.html
+++ b/index.html
@@ -147,7 +147,8 @@
                                 <label for="exampleFormControlTextarea1" class="form-label">Ecrivez-moi donc...</label>
                                 <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
                             </div>
-                            <button type="" class="btn btn-warningr" data-bs-toggle="popover" data-bs-title="Oops..." data-bs-content="Désolé, ça ne marche pas pour le moment...">Envoyer</button>
+                            <button type="button" class="btn btn-warningr">Envoyer</button>
+                            <div class="form-text">Ne marche pas, désolé...</div>
                         </form>
                     </div>
                 </div>
