--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
                                 <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
                             </div>
                             <button type="button" class="btn btn-warningr">Envoyer</button>
-                            <div class="form-text">Ne marche pas, désolé...</div>
+                            <div class="form-text">Ne marche pas encore, désolé...</div>
                         </form>
                     </div>
                 </div>
