--- a/index.html
+++ b/index.html
@@ -114,6 +114,7 @@
         <nav class="navbar">
             <div class="container-fluid">
                 <a class="navbar-brand" href="#">Contactez-moi</a>
+                <p class="d-flex">Powered by Bootstrap 5.1</p>
                 <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas"
                     data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar">
                     <img src="https://img.icons8.com/bubbles/64/contact-card.png" alt="">
