--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <header>
         <nav class="navbar navbar-expand-lg fixed-top">
             <div class="container-fluid">
-                <a class="navbar-brand" href="#profil">
+                <a class="navbar-brand" href="">
                     <img src="./assets/images/iconcv.png" alt="Logo" class="d-inline-block align-text-top">
                     Bienvenue
                 </a>
