--- a/index.html
+++ b/index.html
@@ -152,6 +152,7 @@
                             </div>
                             <button type="button" class="btn btn-warningr">Envoyer</button>
                             <div class="form-text">Ne marche pas encore, désolé...</div>
+                            <a href="./Nintenbro/index.html">Nintenbro</a>
                         </form>
                     </div>
                 </div>
