--- a/Nintenbro/index.html
+++ b/Nintenbro/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 
 <head>
     <meta charset="UTF-8">
@@ -13,10 +13,6 @@
     <header>
         <nav>
             <a id="pkmn" href=""><img id="pika" src="./assets/images/icons8-pokémon-90.png" alt=""></a>
-            <audio id="heartbeat"
-                src="https://www.cjoint.com/doc/21_05/KEenYuotImR_yt1s.com---Zelda-Main-Theme-Song.mp3" preload="auto">
-                Your browser does not support the <code>audio</code> element.
-            </audio>
             <div class="buttons"><a id="zelda" href=""><img id="triforce" src="./assets/images/icons8-triforce-100.png"
                         alt="">{Nintenbro®}</a></div>
             <a id="mario" href=""><img id="itsame" src="./assets/images/icons8-mario-100.png" alt=""></a>
@@ -265,19 +261,95 @@
                         du royaume et lui conte l'histoire des 3 déesses et de la Triforce. Afin de l'aider à dans sa
                         quête le donjon... je veux dire l'arbre Mojo lui confie une pierre très spéciale,
                         l'Emeuraude Kokiri et rends l'âme... <br>
-                        Sur la route de la cité d'Hyrule, Link croise son amie Saria qui lui confie un ocarina,
+                        Sur la route de la cité d'Hyrule, Link croise son amie Saria qui lui confie un ocarina, qui sera
+                        important pour la suite, vous l'aurez
+                        compris, vu le titre du jeu. Et pour le temps, et bien, une fois les 3 pierres réunis, on peut
+                        se rendre dans le futur et mettre fin à la tyrranie
+                        du fameux guerrier du désert : Ganondorf.
 
                     </p>
                 </div>
+                <button type="button" class="collapsible">
+                    <h4>The Legend of Zelda : Twillight Princess</h4>
+                </button>
+                <div class="content">
+                    <p>
+                        Surement l'épisode le plus sombre avec Majora's Mask, et mon préféré. <br>
+                        Cette fois, Link est un jeune homme qui vit dans le village de Toad, alors que tout semblait
+                        bien se passer, le village se fait
+                        attaquer par des monstres, la copine de Link se fait enlever et ce dernier est mis KO. <br>
+                        A son réveil, Link tente de partir à la poursuite des ravisseurs, mais se retrouve face à un
+                        mur, litéralement, enfin plus ou moins... Puisqu'un bras
+                        étrange chope Link et le fait passer de l'autre côté du mur, dans un Hyrule à l'ambiance bien
+                        étrange. Alors que l'étrange créature observe notre héro de près, la Triforce du courage
+                        apparait sur son
+                        poignet et réagit, cette dernière le transforme en loup, il est alors capturé, sous le regards
+                        d'un autre étrange créature aux cheveux oranges, et fini dans une géôle du chateau d'Hyrule.
+                        <br>
+                        Lors qu'il se réveille, il est toujours sous sa forme de loup et a la patte enchainé. Apparait
+                        alors devant lui, la créature qui l'observait de loin plus tôt. <br>
+                        Cette dernière lui propose un deal : Elle l'aide si il l'aide. Classique. Ces derniers tentent
+                        de s'échappé du chateau mais se retrouve par aller dans une des plus haute salle du chateau, ou
+                        ils rencontrent une étrange femme caché sous une cape, qui connait visiblement notre étrange
+                        aliée. On apprends que la créature s'appelle Midona, que le roi du monde du Crépuscule à attaqué
+                        le Royaume et
+                        que suite à cette défaite, Hyrule a été recouvert par le Crépuscule. La femme nous révèle alors
+                        qu'elle est la princesse d'Hyrule, la Princesse Zelda (quelle surprise !). <br>
+                        Après cela, il faut s'échappé réellement du chateau, retrouver sa forme humaine et s'équiper.
+                        Pour cela, passage au village en restant discret pour récupérer un bouclier et une épée,
+                        jusqu'a ce que nous soyons appelé par l'esprit du lac non loin : Latouane. L'esprit l'informe
+                        qu'il faut libérer les 4 autres esprit de la lumière et repousser le crépuscule d'Hyrule, pour
+                        cela, il faudra, dans
+                        chaque région, réunir un certain nombre de perle de lumière afin de rentre sa puissance à
+                        l'esprit régionnal. Une fois le crépuscule chassé, Link retrouve sa forme humaine, accompagné de
+                        sa fameuse
+                        tunique verte. Il doit alors se débarrasser aussi des pouvoirs sombres qui attendent dans les
+                        donjons qui se révèlent être des arctéfacts du Crépuscule que
+                        recherche notre cherche waifu... euh, Midona. Une fois ces artéfacts réunis, nous faisons apprenons qui est le véritable méchant :
+                        Ganondorf. <br>
+                        Et c'est repartie pour une seconde aventure afin de le vaincre, une bonne fois pour toute... ?
+                    </p>
+                    </div>
+                    <button type="button" class="collapsible">
+                        <h4>The Legend of Zelda : Breath of the Wild</h4>
+                    </button>
+                    <div class="content">
+                        <p>
+                            "Ouvre les yeux... Réveille-toi... Réveille-toi... Ouvre les yeux, Link." <br>
+                            Tel sont les premiers mots que nous entendont lors qu'on lance le jeu, le premier Zelda doublé. Link s'éveille, s'avance vers un machin qui fait de la lumière,
+                            et la voix nous dit "prends cette tablette sheikah, elle t'aidera après ce long sommeil", on chope donc son iPad, s'habille parce qu'il caille sévère, et sort de la grotte. <br>
+                            Un paysage et musique magnifique nous accueil alors. Bienvenue sur le Plateau du Prélude, la zone tutorial du jeu. On dirige alors vers une petite tour qui, une fois l'iPad installer, va sortir de terre, comme toutes celles du pays. <br>
+                            La voix s'élève à nouveau, semblant provenir du chateau ou une lueur apparait qui nous dit de nous souvenir qu'on a fait une gros dodo de 100 ans et que quand le démon aura retrouver toute sa puissance, il en sera fini de ce monde, tout en pouvant observer
+                            une aura maléfique avec un tête de sanglier semble s'emparer du chateau. A peine descendu, un viel homme débarque avec son paravoile (un planeur de Fortnite exclusif surement) pour nous informer
+                            que si on veut se casser du plateau, et bien, il en faudra un pour nous aussi. Il nous propose donc de nous le donner si on vient à bout des différents sanctuaires aux quatres coins du plateau.
+                            Une fois cela accomplis, le viel homme nous dit de le rejoindre la jonction des 4 lignes que font les sanctuaires, avant de disparaitre mustérieusement... <br>
+                            Arrivé au sommet des ruines du temple du temps, le viel homme nous attends. Il nous révèle alors être l'âme de Rhoam Bosphoramus Hyrule, ancien et dernier roi d'Hyrule, décédé il y a 100 ans, qui
+                            décide de nous raconter ce qu'il s'est passé... On apprends que le grand méchant est l'incarnation du mal absolue : Ganon, Le Fléau.
+                            Voyant les prémisces de sa réssurection arriver, ces derniers ont alors chercher quelque chose pour se battre et trouver un grand nombre de rélique ancestrales, 4 créatures divine ainsi qu'une armée de créature automatique : les Gardiens, et enfin, la princesse et son pouvoir, ainsi que qu'un preux chevalier armé de l'épée sacrée. <br>
+                            4 jeunes gens fuent alors nommé pour manoeuvrer les créatures divine, et sous le commendement de la princesse, le chevalier et ces derniers furent nommés les 5 Prodiges du royaumes. Malgré que toute les chances soit de leur côté,
+                            l'arrivé de Ganon pris tout le monde de surprise, sortant des entrailles du chateau et prenant le controle des créatures et des gardiens. Le chevalier quand à lui défenda la princesse, mais mourru pendant la bataille.
+                            Seule la princesse, Zelda, surviva et fit face à Ganon. Et le chevalier qui mourru en la protégeant, ce fut Link. Il pu être sauver grace au sanctuaire dans lequel il s'est réveillé, un siècle plus tard. <br>
+                            Zelda est maintenant trop faible pour contenir le Fléau, et le roi demande l'aide de Link. Il doit reprendre le controle des créatures et doit affronter Ganon.
+                            Ou alors, se jetter directement hors du plateau, foncé dans le chateau, esquiver les ennemis et tabaser Ganon avec une épée rouillée et un vieux bouclier moisi et finir le jeu. Oui, c'est totalement possible.
 
+                        </p>
+                    </div>
 
 
             </article>
         </section>
+        <section>
+            <article class="articles">
+                <h2>La timeline officielle</h2>
+                <img id="timeline" src="./assets/images/timeline.jpg" alt="">
+                <p>
+                    Pour le cas Breath of the Wild, il n'est pas vraiment placé dans la timeline et aucune information officielle n'a été donnée. Sur le site japonais de <a href="https://www.nintendo.co.jp/character/zelda/history/index.html">Nintendo</a>, il apparait à la fin, mais séparé du reste et ce malgré que celle çi se sépare en 3.
+                </p>
+            </article>
+        </section>
     </main>
     <footer>
-        <!-- <audio autoplay repeat controls src="https://vgmsite.com/soundtracks/legend-of-zelda-the-twilight-princess-gamerip/fgepjucgkt/2-25%20Hyrule%20Plain%20Night%20Theme.mp3"></audio> -->
-
+        <a href="#zelda"><img src="./assets/images/icons8-triforce-96.png" alt=""></a>
     </footer>
     <script>
         var coll = document.getElementsByClassName("collapsible");
@@ -297,7 +369,7 @@
 
         let audiozelda = new Audio(
             "https://vgmsite.com/soundtracks/the-legend-of-zelda-ocarina-of-time/kuaycbciak/14%20Salia%27s%20Song.mp3"
-            )
+        )
         let audioPokemon = new Audio(
             "https://vgmsite.com/soundtracks/pokemon-game-boy-pok-mon-sound-complete-set-play-cd/vfywpihuos/1-01.%20Opening.mp3"
         )
