--- a/Nintenbro/index.html
+++ b/Nintenbro/index.html
@@ -8,7 +8,7 @@
     <title>Site officiel de Nintenbro</title>
 </head>
 <body>
-    <div class="Pokemon"><a id="pkmn" href=""><img id="pika" src="./assets/images/icons8-pokémon-90.png" alt="">Pokémon</a></div>
+    <div class="Pokemon"><a id="pkmn" href="./pokemon.html"><img id="pika" src="./assets/images/icons8-pokémon-90.png" alt="">Pokémon</a></div>
     <div class="Zelda"><a id="zelda" href="./zelda.html"><img id="triforce" src="./assets/images/icons8-triforce-100.png" alt="">Zelda</a></div>
     <div class="Mario"><a id="mario" href=""><img id="itsame" src="./assets/images/icons8-mario-100.png" alt="">Mario</a></div>
 </body>
