--- a/Nintenbro/zelda.html
+++ b/Nintenbro/zelda.html
@@ -12,7 +12,7 @@
 <body>
     <header>
         <nav>
-            <a id="pkmn" href=""><img id="pika" src="./assets/images/icons8-pokémon-90.png" alt=""></a>
+            <a id="pkmn" href="./pokemon.html"><img id="pika" src="./assets/images/icons8-pokémon-90.png" alt=""></a>
             <div class="buttons"><a id="zelda" href="./index.html"><img id="triforce" src="./assets/images/icons8-triforce-100.png"
                         alt="">{Nintenbro®}</a></div>
             <a id="mario" href=""><img id="itsame" src="./assets/images/icons8-mario-100.png" alt=""></a>
