Final Edition 2 : Battle Royal - The Prout Came Back
pouet

--- a/Nintenbro/pokemon.html
+++ b/Nintenbro/pokemon.html
@@ -15,8 +15,8 @@
     <header>
         <nav>
 
-            <a href="#"> <img src="assets/icons/icons8-mario-100.png" alt="Mario"></a>
-            <a id="logo" href="./index.html"><img src="assets/icons/icons8-pokémon-90.png" alt="Pokémon">{Nintenbro®}</a>
+            <a href="./mario.html"> <img src="assets/icons/icons8-mario-100.png" alt="Mario"></a>
+            <a id="logo" href="./index.html"><img src="assets/icons/icons8-pokemon-90.png" alt="Pokémon">{Nintenbro®}</a>
             <a href="./zelda.html"><img src="assets/icons/icons8-triforce-100.png" alt="Zelda"></a>
 
         </nav>
