--- a/Nintenbro/zelda.html
+++ b/Nintenbro/zelda.html
@@ -6,16 +6,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./assets/css/zelda.css">
+    <link rel="shortcut icon" href="./assets/images/linkzelda.ico" type="image/x-icon">
     <title>Nintenbro - The Legend of Zelda</title>
 </head>
 
 <body>
     <header>
         <nav>
-            <a id="pkmn" href="./pokemon.html"><img id="pika" src="./assets/images/icons8-pokémon-90.png" alt=""></a>
+            <a id="pkmn" href="./pokemon.html"><img id="pika" src="./assets/images/icons8-pokemon-90.png" alt=""></a>
             <div class="buttons"><a id="zelda" href="./index.html"><img id="triforce" src="./assets/images/icons8-triforce-100.png"
                         alt="">{Nintenbro®}</a></div>
-            <a id="mario" href=""><img id="itsame" src="./assets/images/icons8-mario-100.png" alt=""></a>
+            <a id="mario" href="./mario.html"><img id="itsame" src="./assets/images/icons8-mario-100.png" alt=""></a>
         </nav>
     </header>
     <main>
