--- a/index.html
+++ b/index.html
@@ -153,6 +153,8 @@
                             <button type="button" class="btn btn-warningr">Envoyer</button>
                             <div class="form-text">Ne marche pas encore, désolé...</div>
                             <a href="./Nintenbro/index.html">Nintenbro</a>
+                            <a href="./tictactoe/index.html">Morpion</a>
+                            <a href="./Puissance 4/">Puissance 4</a>
                             <a href="./CV2/index.html">Old CV à refaire</a>
                         </form>
                     </div>
