--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
                             <a href="./Nintenbro/index.html">Nintenbro</a>
                             <a href="./tictactoe/index.html">Morpion</a>
                             <a href="./Puissance 4/">Puissance 4</a>
-                            <a href="./CV2/index.html">Old CV à refaire</a>
+                            <a href="./CV2/index.html">Old CV à refaire vite</a>
                         </form>
                     </div>
                 </div>
